Changes file for Business-DK-CPR

$Id: Changes,v 1.8 2008-09-09 19:15:28 jonasbn Exp $

The project Changelog is available at:

http://logiclab.jira.com/browse/BDKCPR#selectedTab=com.atlassian.jira.plugin.system.project%3Achangelog-panel

HEAD,

Feedback from review: [CR-BDKCPR-1] http://logiclab.jira.com/source/cru/CR-BDKCPR-1/
    
- Cleaning TODO, BDKCPR-1 implemented the OOP variation

- Removing Komodo IDE project file from Subversion

- Added strictures and warnings to Build.PL

- Added reference to Build.PL (create_makefile_pl)

- Added reference to Business::DK::CPR
  Perl::Critic::Policy::ValuesAndExpressions::ProhibitConstantPragma

- Updated some information on Perl::Critic policies


Release 0.06, Released Tue Aug 31 2010 Update not necessary

- Added documentation and example on Params::Validate integration [BDKCPR-3]

- Added object oriented variant implementation [BDKCPR-1]

- Add prerequisites test [BDKCPR-2]

- Addressing failing test. Issue with Build.PL and Makefile generation
  see also: http://www.perlmonks.org/?node_id=458282 [BDKCPR-4]


Release 0.05, update recommended for perl 5.10 users

- Eliminated use of the marvellous Hash::Merge, problems with Clone under
  perl 5.10 makes the code break. Hash::Merge uses Clone so I am removing it's
  use since it is breaking my code:
  
  http://rt.cpan.org/Public/Bug/Display.html?id=40957

  I mimicking Hash::Merge's merge in my own simple merge function, which does
  however demonstrate that use of Hash::Merge might be overkill for this task

- Updated MANIFEST.SKIP wrong distribution listed

- Cleaned regular expressions


Release 0.04, update recommended

- Introduced Data::FormValidator::Constraints::Business::DK::CPR, this is sort
  of an example application, it is however just a simple wrapper fitting into
  the Data::FormValidator::Constraints framework - it is should be usable, not
  just a demo, but still experimental
