@@ -10,8 +10,6 @@ http://logiclab.jira.com/browse/BDKCPR#selectedTab=com.atlassian.jira.plugin.sys
 
 - Add use of Params::Validate instead of B::DK::PO?
 
-- Remove export of _checkdate, this seems to be only for testing purposes
-
 - Implement amount parameter for generators?
 
 - Make use of Readonly for control cifers
